# ANVIL

./: .gitignore  README.md  render.yaml
tutorial/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.edge.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml
tutorial/.github/: README.md
tutorial/agents/: __init__.py
tutorial/api/: __init__.py  converters.py  dependencies.py  main.py  middleware.py  schemas.py  workflow_persistence.py
tutorial/config/: __init__.py  constants.py  logging_config.yaml  settings.py
tutorial/core/: __init__.py  base_agent.py  exceptions.py  message_bus.py  state_machine.py
tutorial/database/: __init__.py  connection.py  models.py  seed_data.py  seed_rich_demo.py
tutorial/docker/: Caddyfile  Dockerfile  Dockerfile.agent  Dockerfile.api  Dockerfile.edge  Dockerfile.frontend  nginx.conf
tutorial/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GITHUB_PAGES.md  HACKATHON_SUBMISSIONS.md  RENDER.md  openapi.json
tutorial/events/: __init__.py  context.py  handlers.py  router.py
tutorial/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tutorial/integrations/: __init__.py  connection_manager.py  errors.py  llm_client.py  mcp_client.py  mcp_registry.py  mcp_types.py  tool_wrappers.py
tutorial/knowledge/: __init__.py  concept_extractor.py  feedback_loops.py  flywheel_engine.py  knowledge_graph.py  models.py
tutorial/orchestration/: __init__.py  agent_pool.py  coordinator.py  defense_workflow.py  knowledge_flywheel.py  store.py  teaching_workflow.py
tutorial/scripts/: deploy.sh  export_openapi.py  generate_submission_packages.py  gh-wire-pages-api.sh  init_db.py  run_dev.py  (+2 more)
(+276 files in other folders)
