[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutorial"
version = "0.1.0"
description = "Project TUTORIAL — defense and teaching multi-agent STEM platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Project TUTORIAL" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1.0",
    "PyYAML>=6.0.1",
    "langgraph>=1.2.0,<2",
    "langgraph-checkpoint-sqlite>=3.0.3,<4",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "networkx>=3.2.1",
    "scipy>=1.12.0",
    "mcp>=1.8.0",
    "aiodocker>=0.22.2",
    "asyncssh>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "numpy>=1.26.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
]
edge = [
    "numpy>=1.26.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
]
blockchain = [
    "web3>=6.11.0",
    "eth-account>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "tutorial",
    "config",
    "core",
    "shared",
    "orchestration",
    "events",
    "integrations",
    "agents",
    "knowledge",
    "platforms",
    "database",
    "api",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
